syntax = "proto3";

package messages;
option go_package = "./messages";

service Messages {
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesReply) {}
  rpc CreateMessage (CreateMessageRequest) returns (CreateMessageReply) {}
}

message GetMessagesRequest {
  int64 channel_id = 1;
  int64 last_message_id = 2;
}

message Message {
  int64 message_id = 1;
  int64 user_id = 2;
  string message = 3;
  int32 timestamp = 4;
}

message GetMessagesReply {
  repeated Message messages = 1;
}

message CreateMessageRequest {
  int64 channel_id = 1;
  int64 user_id = 2;
  string message = 3;
  int32 timestamp = 4;
}

message CreateMessageReply {
  int64 message_id = 1;
}